# Logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  UDPServer.cpp  azure-pipelines.yml  main.cpp
benchmark/: bm_main.cpp
logger/: CMakeLists.txt
logger/inc/: ConsoleOutput.h  FileOutput.h  IOutput.h  Logger.h  NetworkOutput.h
logger/src/: Logger.cpp
test/: logger_test.cpp
